--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,31 +4,54 @@
 name: Maven Package
 
 on:
-  release:
-    types: [created]
-
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+permissions:
+  contents: write
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - uses: actions/checkout@v3
+      
+      - name: Generate changelog
+        id: changelog
+        uses: metcalfc/changelog-generator@v4.0.0
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Save to CHANGELOG
+        run: echo "${{ steps.changelog.outputs.changelog }}" > CHANGELOG.md
+        
+      - name: Set up JDK 17.0.2+8
+        uses: actions/setup-java@v3.10.0
+        with:
+          java-version: '17.0.2+8'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: "MinePlayAPI"
+          path:  |
+            ./target/MinePlayAPI*.jar
+            CHANGELOG.md
+      - name: get version and date
+        run: |
+          echo "version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+          echo "name=$(mvn help:evaluate -Dexpression=project.name -q -DforceStdout)" >> $GITHUB_ENV
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - name: GH Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.name }}_${{ env.version }}
+          body: ${{ steps.changelog.outputs.changelog }}
+          fail_on_unmatched_files: true
+          files: "./target/MinePlayAPI*.jar"
+          draft: false
+          prerelease: false
