--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: Maven Package
+name: Gradle Package
 
 on:
   push:
@@ -31,27 +31,33 @@ jobs:
           java-version: '17.0.2+8'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package
-
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+        with:
+          arguments: build
+      - name: Publish to GitHub Packages
+        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+        with:
+          arguments: publish
+        env:
+          USERNAME: ${{ github.actor }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: "MinePlayAPI"
           path:  |
-            ./target/MinePlayAPI*.jar
+            ./build/libs/MinePlayAPI*.jar
             CHANGELOG.md
       - name: get version and date
         run: |
-          echo "version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-          echo "name=$(mvn help:evaluate -Dexpression=project.name -q -DforceStdout)" >> $GITHUB_ENV
           echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
       - name: GH Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ env.name }}_${{ env.version }}
+          tag_name: v${{ env.date }}
           body: ${{ steps.changelog.outputs.changelog }}
           fail_on_unmatched_files: true
-          files: "./target/MinePlayAPI*.jar"
+          files: "./build/libs/MinePlayAPI*.jar"
           draft: false
           prerelease: false
