--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,8 @@ on:
   pull_request:
     branches: [ "master" ]
 permissions:
-  contents: write
+  contents: read
+  packages: write
 jobs:
   build:
     runs-on: ubuntu-latest
