Реинициализация release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out
       - uses: actions/checkout@v3
-      - uses: actions/cache@v3.0.3
       
       - name: Generate changelog
         id: changelog
@@ -35,7 +35,7 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Build with Gradle
-        run: gradle --build-cache assemble --parallel
+        run: gradle --build-cache shadowJar --parallel
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload artifact
