--- a/build.gradle
+++ b/build.gradle
@@ -59,10 +59,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
-
-group = 'vsauko'
-version = '1.0-SNAPSHOT'
-description = 'MinePlayAPI'
+def name = 'MinePlayAPI'
+def path = 'vsauko.mineplayapi.' + name
+def version = '1.0-SNAPSHOT'
 java {
     def javaVersion = JavaVersion.VERSION_17
     sourceCompatibility = javaVersion
@@ -70,8 +69,18 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
+    processResources {
+        def props = [
+                version: version,
+                name: name,
+                path: path]
+        inputs.properties props
+        filteringCharset 'UTF-8'
+        filesMatching('plugin.yml') {
+            expand props
+        }
+    }
 }
-java.sourceCompatibility = JavaVersion.VERSION_17
 
 
 tasks.withType(JavaCompile) {
