--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: '${project.name}'
-version: '${project.version}'
-main: '${project.groupId}.${project.artifactId}.${project.name}'
+name: '${name}'
+version: '${version}'
+main: '${path}'
 depend: [ProtocolLib]
 
